# Spatial-Transcriptomics-and-Cell-Segmentation-Pipeline

./: MANIFEST.in  Makefile  README.md  pyproject.toml  reproduce_paper_results.sh  requirements.txt  run_cell_ann_eval.sh  run_enact.sh  setup_py_env.sh
config/: configs.yaml
src/: main.py
src/enact/: cellassign.py  celltypist.py  package_results.py  pipeline.py
src/enact/assignment_methods/: naive.py  weight_by_area.py  weight_by_gene.py
src/enact/utils/: logging.py
src/eval/: cell_annotation_eval.py  paper_eval-cellassign-methods-highlevel.ipynb
src/synthetic_data/: generate_synthetic_data_Xenium.ipynb  generate_synthetic_data_seqFISH.ipynb
templates/: tmap_template.tmap
